--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:postgresql://localhost/blog-platform
 spring.datasource.username=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
+
+logging.level.org.springframework.security=DEBUG
